odify with pakistan

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My first Example</title>
 </head>
 <body>
-    Hellow world from Qurat 
+    Hellow world from Qurat from Pakistan
 </body>
 </html>
